tests/integration/snapshots/integration__completion__latex__preselect_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 5)?"

---
{
  "isIncomplete": true,
  "items": [
    {
      "label": "document",
      "kind": 1,
      "detail": "built-in",
      "preselect": true,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "document"
      }
    },
    {
      "label": "abstract",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "abstract"
      }
    },
    {
      "label": "array",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "array"
      }
    },
    {
      "label": "center",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "center"
      }
    },
    {
      "label": "csname",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "csname"
      }
    },
    {
      "label": "description",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "description"
      }
    },
    {
      "label": "displaymath",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 5
          },
          "end": {
            "line": 1,
            "character": 5
          }
        },
        "newText": "displaymath"
      }
    }
  ]
}
