tests/integration/snapshots/integration__completion__latex__theorem_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 3, 7)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "figure",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "figure"
      }
    },
    {
      "label": "filecontents",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "filecontents"
      }
    },
    {
      "label": "flushleft",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "flushleft"
      }
    },
    {
      "label": "flushright",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "flushright"
      }
    },
    {
      "label": "foo",
      "kind": 1,
      "detail": "user-defined",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "foo"
      }
    },
    {
      "label": "proof",
      "kind": 1,
      "detail": "amsthm.sty",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 8
          }
        },
        "newText": "proof"
      }
    }
  ]
}
