tests/integration/snapshots/integration__completion__latex__user_command.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 3)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "foobar",
      "kind": 1,
      "detail": "user-defined",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 1
          },
          "end": {
            "line": 1,
            "character": 6
          }
        },
        "newText": "foobar"
      }
    }
  ]
}
