tests/integration/snapshots/integration__completion__latex__verbatim_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 2, 1)?"

---
{
  "isIncomplete": false,
  "items": []
}
