tests/integration/snapshots/integration__completion__latex__verbatim_environment_name.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 10)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "verbatim",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 7
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "verbatim"
      }
    },
    {
      "label": "verbatim*",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 7
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "verbatim*"
      }
    }
  ]
}
